--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rad van Fortuuin</title>
+  <title>Rad van Fortuin</title>
   <style>
     body {
       display: flex;
@@ -37,7 +37,7 @@
 <body>
   <h1>Rad van Fortuin</h1>
   <canvas id="wheel" width="500" height="500"></canvas>
-  <button id="spinBtn">Draai het wiiel!</button>
+  <button id="spinBtn">Draai het wiel!</button>
   <p id="result"></p>
   
   <script>
@@ -84,9 +84,9 @@
       function drawWheel() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         
-        // Testtekening: zwart vakje
-        ctx.fillStyle = 'black';
-        ctx.fillRect(10, 10, 50, 50);
+        // Testtekening: zwart vakje (optioneel, voor debugging)
+        // ctx.fillStyle = 'black';
+        // ctx.fillRect(10, 10, 50, 50);
         
         for (let i = 0; i < numSectors; i++) {
           const startAngle = currentRotation + i * sliceAngle;
@@ -109,7 +109,7 @@
           ctx.fillText(names[i], radius - 10, 5);
           ctx.restore();
         }
-        // Teken de pointer (rode driehoek) iets lager verplaatst zodat deze zeker zichtbaar is
+        // Teken de pointer (rode driehoek) bovenaan
         ctx.fillStyle = "red";
         ctx.beginPath();
         ctx.moveTo(centerX, centerY - radius + 10);
@@ -144,8 +144,13 @@
           if (progress < 1) {
             requestAnimationFrame(animate);
           } else {
+            // Deze berekening gebruikt nu een pointer op de top (3π/2)
             let normalizedRotation = currentRotation % (2 * Math.PI);
-            let winningAngle = (2 * Math.PI - normalizedRotation + Math.PI / 2) % (2 * Math.PI);
+            if (normalizedRotation < 0) {
+              normalizedRotation += 2 * Math.PI;
+            }
+            let pointerAngle = 3 * Math.PI / 2;
+            let winningAngle = ((pointerAngle - normalizedRotation) + 2 * Math.PI) % (2 * Math.PI);
             let winningIndex = Math.floor(winningAngle / sliceAngle) % numSectors;
             document.getElementById("result").textContent = "Gewonnen: " + names[winningIndex];
             document.getElementById("spinBtn").disabled = false;
